# portfolio_yew

./: Cargo.toml  LICENSE  README.md  index.html
assets/: about_assets.json  home_assets.json  projects_assets.json  resume_assets.json
src/: main.rs
src/components/: list.rs  mod.rs  project.rs  sidebar.rs  station.rs
src/helpers/: get_assets.rs  mod.rs
src/pages/: About.rs  CV.rs  Home.rs  Projects.rs  Resume.rs  mod.rs
src/router/: mod.rs  route_objects.rs
