[package]
name = "professional-portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="0.19"
yew-router = "0.16"
log = "0.4.6"
wasm-logger="0.2.0"
reqwasm = "0.4.1"
wasm-bindgen-futures = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"